--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
     <input id="font-size-control" type="range" />
     <br />
     <span id="text">Абракадабра!</span>
-    <script src="../JS/task1.js"  type ="module"></script>    
-    <script  src="../JS/task2.js" type ="module"></script>
-    <script src="../JS/task3.js"  type ="module"></script>
-    <script src="../JS/task4.js"  type ="module"></script> 
-    <script src="../JS/task5.js"  type ="module"></script> 
-    <script src="../JS/task6.js" type ="module"></script> 
-    <script src="../JS/task7.js" type ="module"></script>
+    <script src="./JS/task1.js"  type ="module"></script>    
+    <script  src="./JS/task2.js" type ="module"></script>
+    <script src="./JS/task3.js"  type ="module"></script>
+    <script src="./JS/task4.js"  type ="module"></script> 
+    <script src="./JS/task5.js"  type ="module"></script> 
+    <script src="./JS/task6.js" type ="module"></script> 
+    <script src="./JS/task7.js" type ="module"></script>
   </body>
 </html>
 
